--- a/digitaluplift.html
+++ b/digitaluplift.html
@@ -34,7 +34,12 @@
                 <img src="images/ju.png" alt="">
             </div>
         </section>
-        <!-- <section class="section2"></section> -->
+        <section class="section2">
+            <div class="herosection2">
+                <h2>program overview</h2>
+                <p>Seebuilders Innovation Hub, Seedbuilders Skills Development Foundation and Total Child Model CBT  has partnered with the Ministry of Education to bridge the digital skills gap, address the impact of education disruption, access to digital innovation, improve employability/entrepreneurship and uplift 600 Marginalised Young Persons, Minority Girls and Women, Gender-Based Violence Survivors and Girls with Disabilities from Indigenous Groups in Northern Nigeria who have been previously denied access to technical, financial, and economic empowerment and are victims of abuse, gender and physical discrimination at no cost. </p>
+            </div>
+        </section>
 
 
 
